Test/semantic_tests/test_struct_var_conflict.expected
Error type 3 at Line 10: Redefined variable "S".
Error type 16 at Line 18: Duplicate name of struct "T".
Error type 3 at Line 28: Redefined variable "S".
