Test/semantic_tests/test_struct_var_conflict.cmm
struct S {
    int x;
};

int S;

struct T {
    int y;
};

int main()
{
    struct T {
        int z;
    };

    struct S s1;

    s1.x = S;

    int S;

    return 0;
}
